--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "license": "MIT",
     "dependencies": {
         "typescript": "^5.9.3"
+    },
+    "devDependencies": {
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.2",
+        "tsup": "^8.5.0"
     }
 }
