--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "access": "public"
     },
     "scripts": {
-        "build": "tsup",
+        "build:css": "npx tailwindcss -i ./src/styles/input.css -o ./dist/styles.css --minify",
+        "build:js": "tsup",
+        "build:inject": "node scripts/inject-css.js",
+        "build": "npm run build:js && npm run build:css && npm run build:inject",
         "dev": "tsup --watch",
         "lint": "eslint src --ext .ts,.tsx",
         "clean": "npx rimraf dist",
@@ -30,8 +33,14 @@
         "typescript": "^5.9.3"
     },
     "devDependencies": {
+        "@types/node": "^24.9.0",
         "@types/react": "^18.3.26",
         "@types/react-dom": "^18.3.7",
+        "autoprefixer": "^10.4.21",
+        "esbuild-plugin-postcss2": "^0.1.2",
+        "postcss": "^8.5.6",
+        "postcss-cli": "^11.0.1",
+        "tailwindcss": "^3.4.18",
         "tsup": "^8.5.0"
     }
 }
